--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <li><a href="#about">Sobre</a></li>
                   <li><a href="#resume">Curriculo</a></li>
                   <li><a href="#testimonial">Depoimentos</a></li>
-                  <li><a href="#contact">Contato</a></li>
+                  <li><a href="#contact">Contatoo</a></li>
                 </ul>
               </nav>
             </div>
